<resources>
    <string name="app_name">PCOS Quizzy</string>
    <string name="pcos">PCOS</string>
    <string name="quiz_info">This quiz consists of 4 questions and answers and the number of points achieved can give you a feedback about how far you are from your desired lifestyle. PCOS is not an enemy, it just teaches you to return back to our healthy life in this running world. Chin up!</string>
    <string name="question_1">Question 1: How many times is it recommended to eat a day if you have PCOS?</string>
    <string name="question_2">Question 2: What kind of breakfast is good to prevent high glucose level in your blood?</string>
    <string name="cb_answer_1">Milk with Cornflakes</string>
    <string name="cb_answer_2">Eggs, ham, traditional bread</string>
    <string name="cb_answer_3">Whole grain bread, cheese, vegetables</string>
    <string name="question_3">Question 3: What are the three core elements that you need to implement in your life in order to stay healthy?</string>
    <string name="rb_answer_1">Working hard, no relaxing, lots of coffee</string>
    <string name="rb_answer_2">Fun, Lots of movies, Cornflakes</string>
    <string name="rb_answer_3">Sport, Healthy Diet, Medication</string>
    <string name="question_4">Question 4: How many gram of carbohydrate do you need to consume a day?</string>
    <string name="answer_4">Write your answer here</string>
    <string name="submit">Submit</string>

    <string name="question_1_correct_answer">5</string>
    <string name="question4_correct_answer">160</string>

</resources>
